# playwright-browser-agent

./: .cursorignore  .env-example  .gitignore  DESIGN.adoc  PRD.adoc  README.md  TASKS.adoc  main.py  playwright-mcp-config.json  pyproject.toml
.cursor/rules/: implementation-structure.mdc  implementation-workflow.mdc  planning_prd.mdc  tech-stack.mdc
samples/: google_search_example.txt
src/playwright_browser_agent/: agent.py  cli.py  config.py  prompts.py  utils.py
tests/: test_agent.py  test_cli.py  test_config.py  test_prompts.py  test_utils.py
