[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-browser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.24",
    "langchain-mcp-adapters>=0.0.9",
    "litellm>=1.67.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.15.3",
]

[project.scripts]
pb-agent = "playwright_browser_agent.cli:app"
