[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-browser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-litellm>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.1",
    "litellm>=1.67.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.15.3",
]

[project.scripts]
pb-agent = "playwright_browser_agent.cli:app"

[project.optional-dependencies]
# Add pytest and pytest-asyncio for testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
playwright-browser-agent = { path = ".", editable = true }
